[gd_scene load_steps=7 format=2]

[ext_resource path="res://core/hub.gd" type="Script" id=1]
[ext_resource path="res://assets/yellow_arrow.png" type="Texture" id=2]
[ext_resource path="res://assets/hub.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 30.0

[sub_resource type="CircleShape2D" id=2]
radius = 60.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 53, 11 )

[node name="Hub" type="StaticBody2D"]
collision_layer = 8
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 2.38419e-07, 2.38419e-07 )
scale = Vector2( 1.82813, 1.82813 )
texture = ExtResource( 3 )

[node name="YellowArrow" type="Sprite" parent="."]
texture = ExtResource( 2 )
offset = Vector2( 48, 0 )

[node name="DeployPoint" type="Position2D" parent="YellowArrow"]
position = Vector2( 51, 0 )

[node name="DeployCooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="PickUpZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickUpZone"]
shape = SubResource( 2 )

[node name="TestBarriers" type="StaticBody2D" parent="."]
position = Vector2( 179, 260 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TestBarriers"]
shape = SubResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="TestBarriers"]
position = Vector2( 111, -189 )
rotation = 0.261799
shape = SubResource( 3 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="TestBarriers"]
position = Vector2( 163, -35 )
rotation = -0.523599
shape = SubResource( 3 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="TestBarriers"]
position = Vector2( -143, -121 )
rotation = -1.5708
shape = SubResource( 3 )

[connection signal="timeout" from="DeployCooldown" to="." method="_on_DeployCooldown_timeout"]
[connection signal="body_entered" from="PickUpZone" to="." method="_on_PickUpZone_body_entered"]
